--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -7,6 +7,6 @@ cloud.aws.stack.auto=false
 spring.servlet.multipart.max-file-size=100MB
 spring.servlet.multipart.max-request-size=100MB
 
-spring.security.oauth2.resourceserver.jwt.issuer-uri=https://dev-1foz5--v.us.auth0.com/
+spring.security.oauth2.resourceserver.jwt.issuer-uri=https://dev-e2l6sw0y.us.auth0.com/
 auth0.audience=http://localhost:8080
-auth0.userinfoEndpoint=https://dev-1foz5--v.us.auth0.com/userinfo
+auth0.userinfoEndpoint=https://dev-e2l6sw0y.us.auth0.com/userinfo
